created projects page and linked main page to projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -79,8 +79,8 @@
               </p>
               <br>
               <p>
-                → I'm part of the Robotics Design Team at NYU Tandon. My involvement in the team
-                  revolves around testing sensors and electrical components to make the robot move, dig, and build!
+                → I'm the Electrical Systems Engineer of the Robotics Design Team at NYU Tandon. My involvement in the team
+                  revolves around developing the embedded code for our robot and interfacing Linux system of our onboard computer. 
               </p>
               <br>
               <p>
@@ -135,39 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="section-container">
-            <div class="section__pic-container">
-              <img
-                src="./assets/amazoniahack-pic.png"
-                alt="AmazoniaHack picture"
-                class="experience4-pic"
-              />
-            </div>
-            <div class="experience-details-container">
-            <div class = "headline">
-                <h1>
-                    Amazonia Hackathon • 2022
-                </h1>
-            </div>
-              <div class="text-container">
-                <p>
-                  <br>
-                  This hackathon was an effort to combat deforestation through innovation and technology. 
-                  I was part of a team of 5, comprised of multiple disciplines. Our project was a GPS module tracking system 
-                  that tracks changes in movement behavior. We won second place in the hackathon.
-
-                </p>
-                <br>
-                <p>
-                  <a href = "https://eventornado.com/submission/track-n-save?s=1#ideas" 
-                  target = "_blank" >
-                    <u>Learn more about our proposed solution</u>
-                  </a>
-                  <br>
-                </p>
-              </div>
-            </div>
-          </div>
+        
           <div class="section-container">
             <div class="section__pic-container">
               <img
@@ -186,8 +154,8 @@
                 <p>
                   <br>
                   I've been on the team for 2 years so far! My responsibilities entail 
-                  testing sensors and revitalizing past robots we have developed for 
-                  future testing and extraction. Our team competes in NASA's Robotic Mining Competition:
+                  writing the embedded code for our robot during manual and autonomous
+                  operations. Our team competes in NASA's Robotic Mining Competition:
                   Lunabotics. 
                 </p>
                 <br>
@@ -235,12 +203,6 @@
           </div>
           
       </section>
-      <section id="projects">
-        <h1 class="title">My Projects</h1>
-        <div class="projects-container">
-          <p class = "coming-soon">Coming soon....</p>
-        </div>
-    </section>
       <section id="contact">
         <h1 class="title">Let's Chat</h1>
         <div class="contact-info-upper-container">
