--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yun Hao Dong</title>
+    <title>YunHao Dong</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="mediaqueries.css"/>
     
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Yun Hao Dong</div>
+        <div class="logo">YunHao Dong</div>
         <div>
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
         </div>
       </nav>
       <nav id="hamburger-nav">
-        <div class="logo">Yun Hao Dong</div>
+        <div class="logo">YunHao Dong</div>
         <div class="hamburger-menu">
           <div class="hamburger-icon" onclick="toggleMenu()">
             <span></span>
@@ -31,7 +31,7 @@
           <div class="menu-links">
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
             <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="projects.html" onclick="toggleMenu()">Projects</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
           </div>
         </div>
@@ -41,14 +41,14 @@
             <img src="./assets/profile-pic.png" alt="Yun Hao Dong Picture" class ="profile-pic">
         </div>
         <div class = "section__text">
-            <p class = "section_text_p1">Hello, I'm Yun Hao</p>
+            <p class = "section_text_p1">Hello, I'm YunHao</p>
             <div class = "btn-container">
                 <button 
                 class="btn btn-color-2" onclick="window.open('./assets/YunHaoDong_Resume.pdf')">
                 Resume →
             </button>
             <button 
-                class="btn btn-color-1" onclick="location.href='./#contact'"">
+                class="btn btn-color-1" onclick="location.href='./#contact'">
                 Contact Info ↓
             </button>
             </div>
@@ -84,8 +84,8 @@
               </p>
               <br>
               <p>
-                → I love exploring new places and restaurants. I have been to several boba shops and dessert places in NY.
-                  Hit me up with recommendations!
+                → I love exploring new places and restaurants! I have been to several boba shops and dessert places in NY. Aside from being a foodie,
+                I also enjoy going to the gym. 
               </p>
             </div>
           </div>
