refactored file locations

--- a/snapspecs/snapspecs.html
+++ b/snapspecs/snapspecs.html
@@ -11,8 +11,8 @@
     <h1 class="project_title">
         SnapSpecs
         <div class="project_links">
-            <a href="index.html">Portfolio</a>
-            <a href="projects.html">Projects</a>
+            <a href="../index.html">Portfolio</a>
+            <a href="../project_listing/projects.html">Projects</a>
         </div>
     </h1>
     <section class="details">
@@ -71,7 +71,7 @@
         </div>
     </section>
     <div class = "background_pic">
-        <img src="./assets/snapspecs_background.png" class="group_photo">
+        <img src="../assets/snapspecs_background.png" class="group_photo">
         <p>A photo of our team using prototype iterations</p>
     </div>
 
@@ -86,7 +86,7 @@
         <p>Successfuly developed a functional prototype and pitched our project to the NYU Tandon community.</p>
     </section>
     <section class="issue">
-        <img src="./assets/raise_phone.png" class="raise_phone">
+        <img src="../assets/raise_phone.png" class="raise_phone">
         <div class="text-container">
             <div class="issue_text">
                 <h2>Issue</h2>
@@ -106,7 +106,7 @@
             <div class="proto_text">
                 <p>Our Raspberry Pi interfaces with the tiny camera module, and handles all script upon booting up. This design feature ensures automation and eases user experience. The script functionalities entail button feedback control, relocating the photo, and photo transmission.</p>
             </div>
-            <img src="./assets/snapspecs_schematic.png" class="schematic">
+            <img src="../assets/snapspecs_schematic.png" class="schematic">
         </div>
     </section>
     <section class="next">
@@ -122,7 +122,7 @@
     <footer>
         <div class="next-project">
             <span class="arrow">&gt;</span>
-            <a href="tracknsave.html">
+            <a href="../tracknsave/tracknsave.html">
                 <span class="text">Track n' Save</span>
             </a>
         </div>
