--- a/tracknsave/tracknsave.html
+++ b/tracknsave/tracknsave.html
@@ -11,8 +11,8 @@
     <h1 class="project_title">
         Track n' Save
         <div class="project_links">
-            <a href="index.html">Portfolio</a>
-            <a href="projects.html">Projects</a>
+            <a href="../index.html">Portfolio</a>
+            <a href="../project_listing/projects.html">Projects</a>
         </div>
     </h1>
     <section class="details">
@@ -108,7 +108,7 @@
                     data cleaning and organization to produce the most appropriate notification.
                 </p>
         </div>
-        <img src="./assets/amazonia_slide.png" class="slide_pic">
+        <img src="../assets/amazonia_slide.png" class="slide_pic">
     </section>
     <section class="submit">
         <h4>Our Project Submission consisted of:
@@ -128,7 +128,7 @@
 
     <footer>
         <div class="next-project">
-            <a href="snapspecs.html">
+            <a href="../snapspecs/snapspecs.html">
                 <span class="text">SnapSpecs</span>
             </a>
             <span class="arrow">&lt;</span>
