--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="project_listing/projects.html">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
