--- a/snapspecs/snapspecs.html
+++ b/snapspecs/snapspecs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SnapSpecs</title>
     <link rel="stylesheet" href="snapspecs_style.css">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png" style="height:50%;">
 </head>
 <body class = "fade-in">
     <h1 class="project_title">
