--- a/project_listing/projects.html
+++ b/project_listing/projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="project_style.css"/>
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png" style="height:50%;">
 </head>
 <body class = "fade-in">
     <a href="../index.html" class="back-button">&#8592; Portfolio</a>
