--- a/tracknsave/tracknsave.html
+++ b/tracknsave/tracknsave.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Track n' Save</title>
     <link rel="stylesheet" href="tracknsave_style.css">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png" style="height:50%;">
 </head>
 <body class = "fade-in">
     <h1 class="project_title">
