--- a/project_listing/projects.html
+++ b/project_listing/projects.html
@@ -14,17 +14,22 @@
         <h2 class = "small-description">Some of my works:</h2>
     </div>
     <div id = "projects-container"> 
+        <div class="project_item" onclick="location.href='../datapulse/datapulse.html'">
+            <div class="overlay">Bluetooth integrated environmental data logger</div>
+            <img src="../assets/datapulse_pic.png" alt="DataPulse Pic">
+            <h2>DataPulse</h2>
+        </div>
         <div class="project_item" onclick="location.href='../snapspecs/snapspecs.html'">
-            <img src="../assets/snapspecs_pic.png" alt="Image 1">
-            <div class="overlay"> 
-                A detachable camera system for photo capturing and transfering</div>
+            <img src="../assets/snapspecs_pic.png" alt="SnapSpecs Pic">
+            <div class="overlay"> A detachable camera system for photo capturing and transfering</div>
             <h2>SnapSpecs</h2>
         </div>
         <div class="project_item" onclick="location.href='../tracknsave/tracknsave.html'">
             <div class="overlay">GPS system for tracking changes in movement behavior to combat deforestation</div>
-            <img src="../assets/amazoniahack_pic.png" alt="Image 2">
-            <h2>Track 'n Save</h2>
+            <img src="../assets/amazoniahack_pic.png" alt="Amazonia Hackathon Pic">
+            <h2>Track N' Save</h2>
         </div>
+        
     </div>
 </body>
 </html>
