--- a/snapspecs/snapspecs.html
+++ b/snapspecs/snapspecs.html
@@ -50,9 +50,6 @@
                 <p>Project Management</p>
             </div>
             <div class="item">
-                <p>Treasurer</p>
-            </div>
-            <div class="item">
                 <p>Linux Interfacing</p>
             </div>
             <div class="item">
@@ -105,7 +102,8 @@
         <h2>The Prototype</h2>
         <div class="content">
             <div class="proto_text">
-                <p>Our Raspberry Pi interfaces with the tiny camera module, and handles all script upon booting up. This design feature ensures automation and eases user experience. The script functionalities entail button feedback control, relocating the photo, and photo transmission.</p>
+                <p>Our Raspberry Pi interfaces with the tiny camera module, and handles all script upon booting up. This design feature ensures
+                     automation and eases user experience. The script functionalities entail button feedback control, relocating the photo, and photo transmission.</p>
             </div>
             <img src="../assets/snapspecs_schematic.png" class="schematic">
         </div>
@@ -121,10 +119,16 @@
         </div>
     </section>
     <footer>
+        <div class="prev-project">
+            <a href="../datapulse/datapulse.html">
+                <span class="prev-proj-text">DataPulse</span>
+            </a>
+            <span class="prev-proj-arrow">&lt;</span>
+        </div>
         <div class="next-project">
-            <span class="arrow">&gt;</span>
+            <span class="next-proj-arrow">&gt;</span>
             <a href="../tracknsave/tracknsave.html">
-                <span class="text">Track n' Save</span>
+                <span class="next-proj-text">Track N' Save</span>
             </a>
         </div>
     </footer>
