--- a/tracknsave/tracknsave.html
+++ b/tracknsave/tracknsave.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Track n' Save</title>
+    <title>Track N' Save</title>
     <link rel="stylesheet" href="tracknsave_style.css">
     <link rel="icon" type="image/x-icon" href="../assets/logo.png" style="height:50%;">
 </head>
 <body class = "fade-in">
     <h1 class="project_title">
-        Track n' Save
+        Track N' Save
         <div class="project_links">
             <a href="../index.html">Portfolio</a>
             <a href="../project_listing/projects.html">Projects</a>
@@ -63,9 +63,6 @@
             </div>
             <div class="item">
                 <p>Systems Engineering</p>
-            </div>
-            <div class="item">
-                <p>Documenting</p>
             </div>
         </div>
         <div class="column">
