--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </nav>
       <section id ="profile">
         <div class = "section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Yun Hao Dong Picture" class ="profile-pic">
+            <img src="./assets/profile-pic.jpg" alt="Yun Hao Dong Picture" class ="profile-pic">
         </div>
         <div class = "section__text">
             <p class = "section_text_p1">Hello, I'm YunHao</p>
@@ -75,28 +75,22 @@
             <div class="text-container">
               <p>
                 → Hi! I'm Yun, studying Computer Engineering at NYU Tandon.
-                    I'm interested in building new technology products that
-                    involves integrating a mix of hardware and software into a functioning prototype. 
+                    My interest lies at the intersection of hardware and software
+                    to create more impactful technology. 
               </p>
               <br>
               <p>
                 → I'm the Electrical Systems Engineer of the Robotics Design Team at NYU Tandon. My involvement in the team
-                  revolves around developing the embedded code for our robot and interfacing Linux system of our onboard computer. 
+                  revolves around developing the embedded code for our robot. 
               </p>
               <br>
               <p>
-                → I love exploring new places and restaurants! I have been to several boba shops and dessert places in NY. Aside from being a foodie,
-                I also enjoy going to the gym. 
+                → I love exploring new places and restaurants! I have been to several boba shops and dessert places in NY. 
+                Aside from being a foodie, I also enjoy going to the gym. 
               </p>
             </div>
           </div>
         </div>
-        <img
-          src="./assets/arrow.png"
-          alt="Arrow icon"
-          class="icon arrow"
-          onclick="location.href='./#experience'"
-        />
       </section>
     <section id="experience">
         <h1 class="title"> My Experience</h1>
@@ -154,14 +148,13 @@
               <div class="text-container">
                 <p>
                   <br>
-                  I've been on the team for 2 years so far! My responsibilities entail 
-                  writing the embedded code for our robot during manual and autonomous
-                  operations. Our team competes in NASA's Robotic Mining Competition:
-                  Lunabotics. 
+                  Our team competes in NASA's Robotic Mining Competition: Lunabotics. 
+                  Part of what I do as a systems engineer is to make 
+                  sure our robot adheres to the guidelines listed in the competition rubric. 
                 </p>
                 <br>
                 <p>
-                  <a href = "https://engineering.nyu.edu/research-innovation/student-research/vertically-integrated-projects/vip-teams/nyu-robotic-design-team" 
+                  <a href = "http://nyu-rdt.github.io" 
                   target = "_blank" >
                     <u>Read more about our team and what we do</u>
                   </a>
