Added new project

--- a/project_listing/projects.html
+++ b/project_listing/projects.html
@@ -14,6 +14,11 @@
         <h2 class = "small-description">Some of my works:</h2>
     </div>
     <div id = "projects-container"> 
+        <div class="project_item" onclick="location.href='../securemotion/securemotion.html'">
+            <div class="overlay">Home Security Systm with MQTT</div>
+            <img src="../assets/securemotion_pic.png" alt="Securemotion Pic">
+            <h2>SecureMotion</h2>
+        </div>
         <div class="project_item" onclick="location.href='../datapulse/datapulse.html'">
             <div class="overlay">Bluetooth integrated environmental data logger</div>
             <img src="../assets/datapulse_pic.png" alt="DataPulse Pic">
@@ -21,11 +26,11 @@
         </div>
         <div class="project_item" onclick="location.href='../snapspecs/snapspecs.html'">
             <img src="../assets/snapspecs_pic.png" alt="SnapSpecs Pic">
-            <div class="overlay"> A detachable camera system for photo capturing and transfering</div>
+            <div class="overlay"> Detachable mini camera system</div>
             <h2>SnapSpecs</h2>
         </div>
         <div class="project_item" onclick="location.href='../tracknsave/tracknsave.html'">
-            <div class="overlay">GPS system for tracking changes in movement behavior to combat deforestation</div>
+            <div class="overlay">GPS system for combatting deforestation</div>
             <img src="../assets/amazoniahack_pic.png" alt="Amazonia Hackathon Pic">
             <h2>Track N' Save</h2>
         </div>
