--- a/datapulse/datapulse.html
+++ b/datapulse/datapulse.html
@@ -54,7 +54,7 @@
                 <h2><b>Duration</b></h2>
             </div>
             <div class="item">
-                <p>April - June</p>
+                <p>May - June</p>
             </div>
         </div>
     </section>
@@ -104,11 +104,6 @@
                 <p>From this project, I was able to learn more and interface with Bluetooth features.
                     It allowed me to fully explore what its like to be working on an embedded project,
                     along with some additional software additions to enhance the capabilities.</p>
-
-                <p> The project was also made to be customizable for anyone who might find this application helpful, whether its 
-                    adding addtional services to the microcontroller, or more characteristics to each service.  
-                    
-                </p>
             </div>
             <div class = "scan">
             <img src="../assets/scan_code.png" class="scan_code">
@@ -117,10 +112,16 @@
         </div>
     </section>
     <footer>
+        <div class="prev-project">
+            <a href="../securemotion/securemotion.html">
+                <span class="prev-proj-text">SecureMotion</span>
+            </a>
+            <span class="prev-proj-arrow">&lt;</span>
+        </div>
         <div class="next-project">
-            <span class="arrow">&gt;</span>
+            <span class="next-proj-arrow">&gt;</span>
             <a href="../snapspecs/snapspecs.html">
-                <span class="text">SnapSpecs</span>
+                <span class="next-proj-text">SnapSpecs</span>
             </a>
         </div>
     </footer>
