added github link

--- a/securemotion/securemotion.html
+++ b/securemotion/securemotion.html
@@ -68,7 +68,7 @@
             indicating whether there appears to be a threat to the home. 
         </p>
         <p>
-        More details about the project can be found in this <a href=""> GitHub Repository </a>
+        More details about the project can be found in this <a href="https://github.com/yunhaod/SecureMotion"> GitHub Repository </a>
         </p>
     </section>
     <section class="outcome">
