--- a/datapulse/datapulse.html
+++ b/datapulse/datapulse.html
@@ -105,9 +105,8 @@
                     It allowed me to fully explore what its like to be working on an embedded project,
                     along with some additional software additions to enhance the capabilities.</p>
             </div>
-            <div class = "scan">
-            <img src="../assets/scan_code.png" class="scan_code">
-            <caption class="caption">Code for detecting nearby Arduinos through Bluetooth</caption>
+            <div class = "temp_bluetooth">
+                <img src="../assets/temp_icon.png" class="temp">
             </div>
         </div>
     </section>
