--- a/project_listing/projects.html
+++ b/project_listing/projects.html
@@ -14,6 +14,11 @@
         <h2 class = "small-description">Some of my works:</h2>
     </div>
     <div id = "projects-container"> 
+        <div class="project_item" onclick="location.href='../petplatter/petplatter.html'">
+            <div class="overlay">Pet Feeding over WebSockets</div>
+            <img src="../assets/petplatter_pic.png" alt="PetPlatter Pic">
+            <h2>PetPlatter</h2>
+        </div>
         <div class="project_item" onclick="location.href='../securemotion/securemotion.html'">
             <div class="overlay">Home Security Systm with MQTT</div>
             <img src="../assets/securemotion_pic.png" alt="Securemotion Pic">
@@ -25,8 +30,8 @@
             <h2>DataPulse</h2>
         </div>
         <div class="project_item" onclick="location.href='../snapspecs/snapspecs.html'">
-            <img src="../assets/snapspecs_pic.png" alt="SnapSpecs Pic">
             <div class="overlay"> Detachable mini camera system</div>
+            <img src="../assets/snapspecs_pic.png" alt="SnapSpecs Pic">
             <h2>SnapSpecs</h2>
         </div>
         <div class="project_item" onclick="location.href='../tracknsave/tracknsave.html'">
