--- a/securemotion/securemotion.html
+++ b/securemotion/securemotion.html
@@ -68,7 +68,7 @@
             indicating whether there appears to be a threat to the home. 
         </p>
         <p>
-        More details about the project can be found in this <a href="https://github.com/yunhaod/SecureMotion"> GitHub Repository </a>
+        More details about the project can be found in this <a href="https://github.com/yunhaod/SecureMotion" target="_blank"> GitHub Repository </a>
         </p>
     </section>
     <section class="outcome">
@@ -138,10 +138,16 @@
         </div>
     </section>
     <footer>
+        <div class="prev-project">
+            <a href="../petplatter/petplatter.html">
+                <span class="prev-proj-text">PetPlatter</span>
+            </a>
+            <span class="prev-proj-arrow">&lt;</span>
+        </div>
         <div class="next-project">
-            <span class="arrow">&gt;</span>
+            <span class="next-proj-arrow">&gt;</span>
             <a href="../datapulse/datapulse.html">
-                <span class="text">DataPulse</span>
+                <span class="next-proj-text">DataPulse</span>
             </a>
         </div>
     </footer>
