--- a/index.html
+++ b/index.html
@@ -218,6 +218,15 @@
           </div>
         </div>
       </section>
+      <footer>
+        <div class="footer">
+          <ul class="foot_links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="project_listing/projects.html">Projects</a></li>
+          </ul>
+        </div>
+      </footer>
     <script src="scipt.js"></script>
 </body>
 </html>
