--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
               <p>
                 → Hi! I'm Yun, studying Computer Engineering at NYU Tandon.
                     My interest lies at the intersection of hardware and software
-                    to create more impactful technology. 
+                    to create more impactful technology (IoT, Embedded Systems, etc).
               </p>
               <br>
               <p>
                 → I'm the Electrical Systems Engineer of the Robotics Design Team at NYU Tandon. My involvement in the team
-                  revolves around developing the embedded code for our robot. 
+                  revolves around developing the embedded code for our robot and systems engineering coordination with other
+                  competencies. 
               </p>
               <br>
               <p>
