--- a/petplatter/petplatter.html
+++ b/petplatter/petplatter.html
@@ -73,7 +73,8 @@
                     between clients and servers. Here, an iOS app and the physical device are connected for communication and command execution.
                 </p>
                 <p>
-                    The app contains features for feeding food and refilling water. More technical details about the project can be found in this <a href="" target="_blank"> GitHub Repository </a>
+                    The app contains features for feeding food and refilling water. More technical details about the project can be found in this 
+                    <a href="https://github.com/yunhaod/PetPlatter" target="_blank"> GitHub Repository </a>
                 </p>
             </div>
             <div class="shiba_img">
@@ -105,8 +106,7 @@
         <img src="../assets/pet_app_interface.png" class="final_app_img">
         <div class="final_app_text">
             <p> The iOS app has 2 views, which has a page for connection as well as the other page for the majority of functionalities.
-                When the app receives a warning for low water content in the bowl, the warning disappears
-                after water is refilled.
+                When the app receives a warning for low water content in the bowl, the warning disappears after water is refilled.
             </p>
         </div>
     </section>
@@ -137,10 +137,16 @@
         </div>
     </section>
     <footer>
+        <div class="prev-project">
+            <a href="../mistlink/mistlink.html">
+                <span class="prev-proj-text">MistLink</span>
+            </a>
+            <span class="prev-proj-arrow">&lt;</span>
+        </div>
         <div class="next-project">
-            <span class="arrow">&gt;</span>
+            <span class="next-proj-arrow">&gt;</span>
             <a href="../securemotion/securemotion.html">
-                <span class="text">SecureMotion</span>
+                <span class="next-proj-text">SecureMotion</span>
             </a>
         </div>
     </footer>
