--- a/project_listing/projects.html
+++ b/project_listing/projects.html
@@ -10,10 +10,12 @@
 </head>
 <body class = "fade-in">
     <a href="../index.html" class="back-button">&#8592; Portfolio</a>
-    <div class = "intro">
-        <h2 class = "small-description">Some of my works:</h2>
-    </div>
     <div id = "projects-container"> 
+        <div class="project_item" onclick="location.href='../mistlink/mistlink.html'">
+            <div class="overlay">Smart Humidifier with Matter</div>
+            <img src="../assets/mistlink_pic.png" alt="PetPlatter Pic">
+            <h2>Mistlink</h2>
+        </div>
         <div class="project_item" onclick="location.href='../petplatter/petplatter.html'">
             <div class="overlay">Pet Feeding over WebSockets</div>
             <img src="../assets/petplatter_pic.png" alt="PetPlatter Pic">
