added new experience

--- a/index.html
+++ b/index.html
@@ -96,6 +96,31 @@
     <section id="experience">
         <h1 class="title"> My Experience</h1>
         <div class="section-container">
+          <div class="section__pic-container">
+            <img
+              src="./assets/honeywell_sq.png"
+              alt="honeywell logo picture"
+              class="experience3-pic"
+            />
+          </div>
+          <div class="experience-details-container">
+          <div class = "headline">
+              <h1>
+                  Honeywell • 2025
+              </h1>
+          </div>
+            <div class="text-container">
+              <p>
+                <br>
+                I worked under the building automation sector of Honeywell. My 
+                project was to design an asset tracking system that also involved trying 
+                to utilize the newest feature of Bluetooth 6.0 : Channel Sounding. 
+              </p>
+              <br>
+            </div>
+          </div>
+        </div>
+        <div class="section-container">
             <div class="section__pic-container">
               <img
                 src="./assets/ugsrp-pic.png"
@@ -118,14 +143,9 @@
                 </p>
                 <br>
                 <p>
-                    <a href = "https://drive.google.com/file/d/1lnqC07irXoni8VL5D6uIoNivJ2w9C3oI/view?usp=sharing"
+                  <a href = "https://drive.google.com/file/d/1lnqC07irXoni8VL5D6uIoNivJ2w9C3oI/view?usp=sharing"
                     target = "_blank">
-                  <u>Read more abour work</u>
-                  </a>
-                  <br>
-                  <a href = "https://drive.google.com/file/d/1rp6ExTwQNSM7kyCi-BA8d_LRvSlRkGGL/view"
-                    target = "_blank">
-                  <u>Check out research projects from other students!</u>
+                  <u>Read more abour work here</u>
                   </a>
                 </p>
               </div>
