--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt = "My Linkedin Profile"
-                class="icon" onclick="location.href= 'https://www.linkedin.com/in/yun-hao-dong/'"/>
+                class="icon" onclick="location.href= 'https://www.linkedin.com/in/yunhaodong/'"/>
                 <img src="./assets/github.png" alt = "My Github Profile"
                 class="icon" onclick="location.href= 'https://github.com/yunhaod'"/>
             </div>
